--- a/GigHub/Content/Site.css
+++ b/GigHub/Content/Site.css
@@ -22,3 +22,71 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* Bootstrap override*/
+.navbar-inverse {
+    background-color: #ff4342;
+    border-color: #ff4342;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: #ffffff;
+}
+.navbar-inverse .navbar-brand {
+    color: #ffffff;
+}
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
+    color: #ffffff;
+    background-color: rgba(234, 45, 45, 0.8901960784313725);
+}
+.dropdown-menu{
+    box-shadow:none;
+    -webkit-box-shadow: none;
+}
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color: #ffffff;
+    border-bottom-color: #ffffff;
+}
+.navbar-brand{
+    font-weight: 700;
+}
+body {
+    font-size: 17px;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+    font-family: Lato,"Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    line-height: 1.1;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-control{
+    font-size: 17px;
+    padding: 20px 15px;
+    border-radius: 9px;
+}
+.form-control:focus {
+    border-color:#2196f3;
+    box-shadow:none;
+    -webkit-box-shadow:none;
+}
+
+.btn{
+    font-size:17px;
+    padding: 7px 20px;
+    border-radius: 9px;
+}
